force-app/main/default/objects/Question__c/fields/Conditional_Response__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Response__c</fullName>
    <label>Conditional Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>