force-app/main/default/objects/Question__c/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <label>HelpText</label>
    <length>50</length>
    <type>Text</type>
</CustomField>