force-app/main/default/objects/Question__c/fields/OptionValueSet__c.field-meta.xml
<CustomField>
    <fullName>OptionValueSet__c</fullName>
    <label>Response Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>