force-app/main/default/objects/Question__c/fields/Question_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Sequence_Number__c</fullName>
    <label>Question Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>