force-app/main/default/objects/Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date/Time</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area Text Area (Rich)</fullName>
            </value>
            <value>
                <fullName>Radio Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>