force-app/main/default/objects/Question__c/fields/Requires_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>Requires_File_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires File Upload</label>
    <type>Checkbox</type>
</CustomField>