force-app/main/default/objects/Question__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Section__c.Assessment_Template__c</field>
            <operation>equals</operation>
            <valueField>$Source.Assessment_Template__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>