force-app/main/default/objects/Question__c/fields/SectionName__c.field-meta.xml
<CustomField>
    <fullName>SectionName__c</fullName>
    <formula>Section__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SectionName</label>
    <type>Text</type>
</CustomField>