force-app/main/default/objects/Question__c/validationRules/CheckOptionValueSet.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOptionValueSet</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(OptionValueSet__c),
OR(ISPICKVAL(Question_Type__c,&apos;Radio&apos;),
ISPICKVAL(Question_Type__c, &apos;Picklist&apos;),
ISPICKVAL(Question_Type__c, &apos;Picklist (Multi-Select)&apos;)))</errorConditionFormula>
    <errorMessage>Response Values cannot be empty for the selected Question Type</errorMessage>
</ValidationRule>