force-app/main/default/objects/Question__c/validationRules/CheckOptionValueSetForOtherTypes.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOptionValueSetForOtherTypes</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT((ISBLANK(OptionValueSet__c))) ,
NOT(OR((ISPICKVAL(Question_Type__c,&apos;Radio&apos;)),
(ISPICKVAL(Question_Type__c, &apos;Picklist&apos;)),
(ISPICKVAL(Question_Type__c, &apos;Picklist (Multi-Select)&apos;)),(ISPICKVAL(Question_Type__c,&apos;Checkbox&apos;)))))</errorConditionFormula>
    <errorMessage>OptionValueSet is not mandatory for the mentioned question type</errorMessage>
</ValidationRule>